bulletin file link to listeelevebulletin

--- a/views/listeelevesbulletin.ejs
+++ b/views/listeelevesbulletin.ejs
@@ -37,7 +37,7 @@
             <td>
               <button
                 type="button"
-                onclick="window.location.href='bulletin.html'"
+                onclick="window.location.href='bulletin'"
               >
                 Voir
               </button>
