fix link to contact page

--- a/views/accueilsurveillant.ejs
+++ b/views/accueilsurveillant.ejs
@@ -12,7 +12,7 @@
       </div>
       <p>Bienvenue surveillant </p>
       <div class="navbar">
-        <a href="contacteradmin.html">Contacter l'admin</a>
+        <a href="/contact">Contacter l'admin</a>
         <a href="/logout">Se déconnecter</a>
       </div>
       <div class="side">
