--- a/views/accueildirecteur.ejs
+++ b/views/accueildirecteur.ejs
@@ -14,7 +14,7 @@
       </div>
       <p>Bienvenue Directeur des études  </p>
       <div class="navbar">
-        <a href="contacteradmin.html">Contacter l'admin</a>
+        <a href="/contact">Contacter l'admin</a>
         <a href="/logout">Se déconnecter</a>
       </div>
       <div class="side">
