fix link to attestation

--- a/views/listeeleveattestation.ejs
+++ b/views/listeeleveattestation.ejs
@@ -37,7 +37,7 @@
             <td>
               <button
                 type="button"
-                onclick="window.location.href='attestation.html'"
+                onclick="window.location.href='attestation'"
               >
                 Voir
               </button>
