fix link to attestation

--- a/views/attestation.ejs
+++ b/views/attestation.ejs
@@ -11,7 +11,7 @@
     </div>
 
     <page size="A4">
-      <img alt="logo" src="logo.png" />
+      <img alt="logo" src="/images/logo.png" />
       <h1>Attestation D'inscription</h1>
       <p>
         Le lycée ain chock atteste que l'élève
