fix link to convocation

--- a/views/accueilconvocation.ejs
+++ b/views/accueilconvocation.ejs
@@ -46,7 +46,7 @@
         />
       </div>
       <div class="btn">
-        <button type="button" onclick="window.location.href='convocation.html'">
+        <button type="button" onclick="window.location.href='convocation'">
           Voir
         </button>
       </div>
