fix link to convocation

--- a/views/accueildirecteur.ejs
+++ b/views/accueildirecteur.ejs
@@ -12,7 +12,7 @@
       <div class="header">
         <h1>Application de gestion scolaire</h1>
       </div>
-      <p>Bienvenue Directeur des études  </p>
+      <p>Bienvenue Mr  <%=user.Firstname  %>  </p>
       <div class="navbar">
         <a href="/contact">Contacter l'admin</a>
         <a href="/logout">Se déconnecter</a>
