--- a/views/accueilsurveillant.ejs
+++ b/views/accueilsurveillant.ejs
@@ -10,7 +10,7 @@
       <div class="header">
         <h1>Application de gestion scolaire</h1>
       </div>
-      <p>Bienvenue surveillant </p>
+      <p>Bienvenue <%=user.Firstname  %>  </p>
       <div class="navbar">
         <a href="/contact">Contacter l'admin</a>
         <a href="/logout">Se déconnecter</a>
