add new functionalites to site and created db for students and profs

--- a/views/accueildirecteur.ejs
+++ b/views/accueildirecteur.ejs
@@ -20,9 +20,9 @@
       <div class="side">
         <h2>Administration</h2>
         <ul>
-          <li><a href="#">Le Staff Administrative</a></li>
+          <li><a href="/viewstaffs">Le Staff Administrative</a></li>
           <li><a href="/listedeclasse">Liste de élèves</a></li>
-          <li><a href="#">Liste de enseignants</a></li>
+          <li><a href="/viewstaffs">Liste de enseignants</a></li>
           <li><a href="#">Liste de classes</a></li>
         </ul>
         <h2>Comptabilité</h2>
