--- a/views/accueilsurveillant.ejs
+++ b/views/accueilsurveillant.ejs
@@ -18,7 +18,7 @@
       <div class="side">
         <h2>Administration</h2>
         <ul>
-          <li><a href="/staff">Le Staff Administrative</a></li>
+          <li><a href="/viewstaffs">Le Staff Administrative</a></li>
           <li><a href="/listedeclasse">Liste de élèves</a></li>
           <li><a href="/listeclassebulletins">Les bulletins</a></li>
           <li>
