--- a/views/accueilsurveillant.ejs
+++ b/views/accueilsurveillant.ejs
@@ -37,17 +37,7 @@
         <h2><a href="calendrier.html">Calendrier</a></h2>
       </div>
       <div class="body">
-        <h1>Taux de reuissite et d'éches globale</h1>
-
-        <div class="ui-widgets">
-          <div class="ui-values">50%</div>
-          <div class="ui-labels">Ruissite</div>
-        </div>
-
-        <div class="ui-widgets">
-          <div class="ui-values">85%</div>
-          <div class="ui-labels">Echecs</div>
-        </div>
+        <%- include('includes/_progressbar') %>
         <div
           onmouseover="showmore()"
           onmouseout="normalshow()"
