--- a/views/attestation.ejs
+++ b/views/attestation.ejs
@@ -15,8 +15,8 @@
       <h1>Attestation D'inscription</h1>
       <p>
         Le lycée ain chock atteste que l'élève
-        <span>Adama Hamadou Issa</span> est inscrit régulierement en classe de
-        <span> Terminale C</span> pour le compte de l'année scolaire<span>
+        <span><%= eleve.nom  %>  <%=eleve.prenom  %> </span> est inscrit régulierement en classe de
+        <span><%= classe.toUpperCase()  %> </span> pour le compte de l'année scolaire<span>
           2018-2019.</span
         >
       </p>
