--- a/views/attestationconvocationaccueil.ejs
+++ b/views/attestationconvocationaccueil.ejs
@@ -19,7 +19,7 @@
       >
         Convocations
       </div>
-      <div class="flex-content">Cartes</div>
+      <div class="flex-content" onclick="window.location.href='accueilsurveillant'">DASHBOARD</div>
     </div>
     <div class="footer">© 2022 copyright</div>
   </body>
