--- a/views/viewelevesattestation.ejs
+++ b/views/viewelevesattestation.ejs
@@ -8,8 +8,8 @@
     <main id="site-main">
         <div class="container">
             <div class="box-nav d-flex justify-between">
-                <a href="/add_eleve" class="border-shadow">
-                    <span class="text-gradient">Add new eleve<i class="fas fa-user"></i></span>
+                <a href="#" class="border-shadow">
+                    <span class="text-gradient">Imprimer Tout<i class="fas fa-user"></i></span>
                 </a>
             </div>
 
@@ -24,11 +24,11 @@
                             <th>Date de Naissance</th>
                             <th>Classe</th>
                             <th>Action</th>
-                            <th>Appreciation</th>
+        
                         </tr>
                     </thead>
                     <tbody>
-                        <%- include('includes/_showeleve') %>
+                        <%- include('includes/_showeleveattestation') %>
                     </tbody>
                 </table>
             </form>
