--- a/public/css/styleadmin.css
+++ b/public/css/styleadmin.css
@@ -57,7 +57,7 @@ a {
 }
 
 .text-dark{
-    color: var(--dark);
+    color: whitesmoke;
 }
 
 .inline{
@@ -76,9 +76,10 @@ a {
 }
 
 #header nav{
-    background-color: #06d6a0;
+    background-color:  brown;
     padding: 1em 0;
     width: 100%;
+    
 }
 
 #site-main{
