--- a/views/accueilprof.ejs
+++ b/views/accueilprof.ejs
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Acceuil</title>
+    <title>Accueil</title>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/accueildirecteur.css" />
+    <link rel="stylesheet" href="/css/accueilsurveillant.css" />
     
   </head>
   <body>
@@ -13,7 +11,7 @@
       <div class="header">
         <h1>Application de gestion scolaire</h1>
       </div>
-      <p>Bienvenue Mr  <%=user.Firstname  %>  </p>
+      <p>Bienvenue Mr <%=user.Lastname %> le prof de <%=user.Matiere  %>   </p>
       <div class="navbar">
         <a href="/contact">Contacter l'admin</a>
         <a href="/logout">Se déconnecter</a>
@@ -21,31 +19,16 @@
       <div class="side">
         <h2>Administration</h2>
         <ul>
-          <li><a href="/staff">Le Staff Administrative</a></li>
-          <li><a href="/listedeclasse">Liste de élèves</a></li>
-          <li><a href="/viewprof">Liste de enseignants</a></li>
+          <li><a href="/viewstaffs">Le Staff Administrative</a></li>
+          <li><a href="/viewelevesprof?classe=<%= user.Classe %>&matiere=<%= user.Matiere %>  ">Liste de élèves</a></li>
+          
         </ul>
-        <h2>Comptabilité</h2>
-        <ul>
-          <li><a href="#">Les Factures</a></li>
-          <li><a href="#">Les Dépenses </a></li>
-          <li><a href="listedeclassescolarite">Scolarité</a></li>
-        </ul>
-        <h2><a href="#">Statistique Du Lycée</a></h2>
         <img src="/images/RR.jpg" alt="IMAGE POUR LE DGR" />
-        <h2><a href="index.html">Calendrier</a></h2>
+        <h2><a href="calendrier.html">Calendrier</a></h2>
       </div>
       <div class="body">
-       <!--  <div class="ui-widgets">
-          <div class="ui-values">85%</div>
-          <div class="ui-labels">Ruissite</div>
-        </div>
-
-        <div class="ui-widgets">
-          <div class="ui-values">50%</div>
-          <div class="ui-labels">Echecs</div>
-        </div> -->
-        <!-- <div
+        <%- include('includes/_progressbar') %>
+        <div
           onmouseover="showmore()"
           onmouseout="normalshow()"
           class="flex-container"
@@ -55,12 +38,13 @@
           </div>
           <div id="girls">Filles <br /><span>720</span></div>
           <div id="boys">Garçon<br /><span>514</span></div>
-        </div> -->
-          <%- include('includes/_progressbar') %>
+        </div>
       </div>
       <div class="footer">© 2022 copyright</div>
     </div>
     <script>
+
+      
       function showmore() {
         document.getElementById("girls").innerHTML =
           "Admis 29% <br>échoués  71%";
