--- a/views/viewappreciationtuteur.ejs
+++ b/views/viewappreciationtuteur.ejs
@@ -7,34 +7,25 @@
     <!-- Main Site -->
     <main id="site-main">
         <div class="container">
-            <div class="box-nav d-flex justify-between">
-                <a href="/add_eleve" class="border-shadow">
-                    <span class="text-gradient">Add new eleve<i class="fas fa-user"></i></span>
-                </a>
-            </div>
-
             <!-- form handling -->
             <form action="/" method="POST">
                 <table class="table">
                     <thead class="thead-dark">
                         <tr>
-                            <th>Code Apogee</th>
-                            <th>First name</th>
-                            <th>Last name</th>
-                            <th>Date de Naissance</th>
-                            <th>Classe</th>
-                            <th>Action</th>
-                            <th>Appreciation</th>
+                            <th>DATE</th>
+                            <th>APPRECIATION</th>
+                            <th>NOM DU PROFESSEUR</th>
+                            <th>MATIERE</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <%- include('includes/_showeleve') %>
+                        <%- include('includes/_showappreciationtuteur') %>
                     </tbody>
                 </table>
             </form>
             <div class="box-nav d-flex justify-between">
                 <a class="border-shadow" onclick="link()">
-                    <span class="text-gradient">Liste de classe<i class="fas fa-user"></i></span>
+                    <span class="text-gradient">Dashboard<i class="fas fa-user"></i></span>
                 </a>
             </div>
         </div>
@@ -55,18 +46,7 @@ var myCookies = getCookies();
 console.log(myCookies.role);
 
 function link() {
-    location.assign('/listedeclasse')
-    /* switch (myCookies.role) {
-        case 'surveillant':
-            location.assign('/accueilsurveillant')
-            break;
-        case 'directeur':
-            location.assign('/accueildirecteur')
-            break;
-    
-        default:
-            break;
-    } */
+    location.assign('/accueiltuteur?classe=<%=classe%>')
 }
 </script>
 
