--- a/views/viewelevesprof.ejs
+++ b/views/viewelevesprof.ejs
@@ -7,11 +7,6 @@
     <!-- Main Site -->
     <main id="site-main">
         <div class="container">
-            <div class="box-nav d-flex justify-between">
-                <a href="/add_eleve" class="border-shadow">
-                    <span class="text-gradient">Add new eleve<i class="fas fa-user"></i></span>
-                </a>
-            </div>
 
             <!-- form handling -->
             <form action="/" method="POST">
@@ -21,20 +16,22 @@
                             <th>Code Apogee</th>
                             <th>First name</th>
                             <th>Last name</th>
-                            <th>Date de Naissance</th>
+                            <th>1er</th>
+                            <th>2nd</th>
+                            <th>3rd</th>
                             <th>Classe</th>
-                            <th>Action</th>
-                            <th>Appreciation</th>
+                            <th>NOTE</th>
+                            <th>APPRECIATION</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <%- include('includes/_showeleve') %>
+                        <%- include('includes/_showeleveprof') %>
                     </tbody>
                 </table>
             </form>
             <div class="box-nav d-flex justify-between">
                 <a class="border-shadow" onclick="link()">
-                    <span class="text-gradient">Liste de classe<i class="fas fa-user"></i></span>
+                    <span class="text-gradient">Dashboard<i class="fas fa-user"></i></span>
                 </a>
             </div>
         </div>
@@ -55,19 +52,8 @@ var myCookies = getCookies();
 console.log(myCookies.role);
 
 function link() {
-    location.assign('/listedeclasse')
-    /* switch (myCookies.role) {
-        case 'surveillant':
-            location.assign('/accueilsurveillant')
-            break;
-        case 'directeur':
-            location.assign('/accueildirecteur')
-            break;
-    
-        default:
-            break;
-    } */
-}
+    location.assign('/accueilprof')
+} 
 </script>
 
 <!-- include footer -->
