--- a/views/bulletins.ejs
+++ b/views/bulletins.ejs
@@ -24,12 +24,10 @@
                             <th>Date de Naissance</th>
                             <th>Classe</th>
                             <th>Action</th>
-                            <th>Note</th> 
-                            <th>Appreciation</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <%- include('includes/_showeleve') %>
+                        <%- include('includes/_showbulletin') %>
                     </tbody>
                 </table>
             </form>
