--- a/views/includes/_showeleve.ejs
+++ b/views/includes/_showeleve.ejs
@@ -11,6 +11,11 @@
             </a>
         </td>
         <td>
+            <a href="/viewnote?id=<%= eleves[i]._id%>&classe=<%=classe  %> " class="btn border-shadow update">
+                <span class="text-gradient"><i>VOIR</i></span>
+            </a>
+        </td>
+        <td>
             <a class="btn border-shadow delete" href="/viewappreciation?id=<%=eleves[i]._id  %> ">
                 <span class="text-gradient"><i>VOIR</i></span>
             </a> 
