--- a/views/listeeleves.ejs
+++ b/views/listeeleves.ejs
@@ -25,7 +25,7 @@
       </div>
       <div class="table">
         <table>
-          <th>Idéntifiant</th>
+          <th>Code Apogee</th>
           <th>Nom</th>
           <th>Prénom</th>
           <th>Date de naissance</th>
