--- a/views/listeclassebulletins.ejs
+++ b/views/listeclassebulletins.ejs
@@ -7,42 +7,58 @@
   </head>
   <body>
     <div
-      onmouseover="showmore()"
-      onmouseout="normalshow()"
       class="container-flex"
     >
-      <div
-        id="seconde"
-        onclick="window.location.href='listeelevesbulletin'"
-      >
-        2nde
+      <div id="premiere" onclick="callpage(this.id)">
+        PREMIERE
       </div>
-      <div
-        onclick="window.location.href='listeelevesbulletin.html'"
-        id="premiere"
-      >
-        1ère
+      <div onclick="callpage(this.id)" id="seconde">
+        SECONDE
       </div>
-      <div
-        onclick="window.location.href='listeelevesbulletin.html'"
-        id="terminale"
-      >
-        Terminale
+      <div onclick="callpage(this.id)" id="terminale">
+        TERMINALE
+      </div>
+      <div onclick="callpage(this.id)" id="dashboard">
+        DASHBOARD
       </div>
     </div>
     <script>
-      function showmore() {
-        document.getElementById("seconde").innerHTML = "Nombre de élèves<br>60";
-        document.getElementById("premiere").innerHTML =
-          "Nombre de élèves<br>70";
-        document.getElementById("terminale").innerHTML =
-          "Nombre de élèves <br>46";
+      var getCookies = function(){
+  var pairs = document.cookie.split(";");
+  var cookies = {};
+  for (var i=0; i<pairs.length; i++){
+    var pair = pairs[i].split("=");
+    cookies[(pair[0]+'').trim()] = unescape(pair.slice(1).join('='));
+  }
+  return cookies;
+}
+
+var myCookies = getCookies();
+
+
+    function callpage(id) {
+      switch (id) {
+        case 'premiere':
+          location.assign('/bulletins?id=premiere')
+          break;
+        case 'seconde':
+          location.assign('/bulletins?id=seconde')
+          break;
+        case 'terminale':
+          location.assign('/bulletins?id=terminale')
+          break;
+        case 'dashboard':
+          if (myCookies.role == 'directeur') {
+            location.assign('/accueildirecteur')
+          }else if (myCookies.role == 'surveillant') {
+            location.assign('/accueilsurveillant')
+          }
+          break;
+    
+        default:
+          break;
       }
-      function normalshow() {
-        document.getElementById("seconde").innerHTML = "2nde";
-        document.getElementById("premiere").innerHTML = "1ère";
-        document.getElementById("terminale").innerHTML = "Terminale";
-      }
+    }    
     </script>
     <div class="footer">© 2022 copyright</div>
   </body>
